--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,8 +49,8 @@ main {
         align-items: center;
         justify-content: end;
         #new-document {
-            width: 20px;
-            height: 20px;
+            width: 100%;
+            height: 100%;
             cursor: pointer;
         }
     }
@@ -65,6 +65,7 @@ main {
         overflow-y: scroll; */
 
         .arquivo {
+            user-select: none;
             width: 100%;
             height: 32px;
             background-color: black;
@@ -116,11 +117,34 @@ main {
     background-color: aliceblue;
 }
 .aba-paginas {
+    display: flex;
     width: 100%;
-    height: 5%;
-    min-height: 30px;
+    /* height: 5%; */
+    height: 30px;
     background-color: rgba(0, 255, 255, 0.744);
+    gap: 2px;
 }
+.item {
+    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    /* gap: 5px; */
+    height: 100%;
+    min-width: 100px;
+    background-color: rgb(112, 112, 112);
+    z-index: 100;
+    color: white;
+
+    button {
+        height: 100%;
+        width: 20%;
+        background-color: rgb(112, 112, 112);
+        border: none;
+    }
+    
+}
+
 .editor {
     width: 100%;
     height: 100%;
