--- a/front/src/components/menu-lateral/MenuLateral.css
+++ b/front/src/components/menu-lateral/MenuLateral.css
@@ -1,57 +1,54 @@
-#menu-explorator {
-    /* position: relative; */
-    background-color: rgba(178, 178, 178, 0.183);
-    border-left: 2px solid rgba(0, 0, 0, 0.053);
-    /* width: ; */
-    width: 300px;
+.menu-lateral {
+    background-color: rgb(243, 243, 243);
     height: 100%;
-    /* resize: horizontal; */
-    .head-menu {
-        background-color: aliceblue;
-        min-height: 30px;
-        padding: 5px;
+    width: 300px;
+    padding: 4px 0px 4px 0px;
+}
+.header-menu {
+    display: flex;
+    align-items: center; 
+    min-height: 35px;
+    width: 100%;
+    padding: 4px;
+    .buttonFile {
+        height: 20px;
+        width: 30px;
+        cursor: pointer;
+    }
+}
+.files-container {
+    width: 100%;
+    height: min-content;
+    /* flex: 1; */
+}
+
+/* ################################################## */
+/* FILES SECTION */
+
+.file-item {
+    display: flex;
+    padding: 0px 10px 0px 10px;
+    width: 100%;
+    height: 27px;
+    cursor: pointer;
+
+    .info-item-file {
         display: flex;
         align-items: center;
-        justify-content: end;
-        #new-document {
-            width: 100%;
-            height: 100%;
-            cursor: pointer;
-        }
-    }
-    #arquivo-container {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
         height: 100%;
-        padding: 5px;
-        gap: 2px;
-        /* overflow-x: hidden;
-        overflow-y: scroll; */
-
-        .arquivo {
-            user-select: none;
-            width: 100%;
-            height: 32px;
-            background-color: black;
-            cursor: pointer;
-            color: azure;
+        width: 50%;
+        .info {
+            padding: 5px;
         }
     }
 }
-.oculta {
-    display: none;
+.on-click {
+    background-color: rgb(136, 146, 146);
 }
-#delimitador {
-    /* color: aliceblue; */
-    border: none;
-    width: 5px;
-    height: 100%;
-    position: absolute;
-    left: 100%;
-    z-index: 10;
+.off-click {
+    background-color: rgb(233, 240, 240);
 }
-#delimitador:hover {
-    cursor: e-resize;
-    background-color: aqua;
+
+.file-item:hover {
+    background-color: rgb(136, 146, 146);
 }
