--- a/front/src/components/doc-system/Doc.css
+++ b/front/src/components/doc-system/Doc.css
@@ -1,3 +1,6 @@
+ul li{
+    padding-left: 20px;
+}
 .file-item {
     display: flex;
     padding: 0px 10px 0px 10px;
@@ -16,6 +19,7 @@
     }
 }
 .dir-item {
+    display: block;
     width: 100%;
     height: max-content;
     cursor: pointer;
@@ -29,6 +33,14 @@
             padding: 5px;
         }
     }
+    ul {
+        padding-left: 20px;
+        display: none;
+    }
+}
+.dir-item li:nth-child(n+2) {
+    padding-left: 30px;
+    display: none;
 }
 
 .file-item:hover, .dir-item:hover {
@@ -40,15 +52,4 @@
 }
 .off-click {
     background-color: rgb(233, 240, 240);
-}
-
-.on-click-path{
-    ul li {
-        display: none;
-    }
-}
-.on-click-path{
-    ul li {
-        display: block;
-    }
 }
